alignment fixed

--- a/client-side/src/index.css
+++ b/client-side/src/index.css
@@ -31,8 +31,8 @@ header h1{
 display: grid;
 grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 grid-auto-rows: minmax(150px, auto);
-grid-gap: 10px;
 margin:0 auto;
+align-self: center;
 
 }
 
